--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,14 @@ services:
       - 8000:8000
     env_file:
       - ./.env
+
+  postgres:
+    image:
+    environment:
+      - POSTGRES_PASSWORD=dummy123
+      - POSTGRES_DB=social-fastapi
+    volumes:
+      - socialposts-db:/var/lib/postgresql/data
+
+volumes:
+  socialposts-db:
