--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./.env
 
   postgres:
-    image:
+    image: postgres
     environment:
       - POSTGRES_PASSWORD=dummy123
       - POSTGRES_DB=social-fastapi
