--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   api:
-    build: .
+    image: docker-user/socialposts-fastapi
     depends_on:
       - postgres
     ports: 
